# captain

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: audio.rs  autocomplete.rs  embeddings.rs  image_analysis.rs  main.rs  prompts.rs  screenshot.rs  search.rs  shell.rs  trajectory.rs  utils.rs
src/llm/: anthropic.rs  custom.rs  fireworks.rs  gemini.rs  mod.rs  openai.rs
