[package]
name = "captain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.9"
screenshots = "0.8.5"
base64 = "0.21.7"
image = "0.24"
async-trait = "0.1.86"
futures = "0.3.31"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
enigo = "0.3.0"
device_query = "3.0.0"
regex = "1.11.1"